# OSScout

./: .env.example  .gitignore  =1.0.0  PROGRESS.md  Project_Plan.md  README.md  claude.md  docker-compose.dev.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 001_init.py  002_add_notify_email.py
backend/app/: cli.py  config.py  main.py
backend/app/agents/: community_agent.py  evolution_agent.py  llm_enhancer.py  orchestrator.py  quality_agent.py  reporter.py  security_agent.py  synthesis_agent.py
backend/app/core/: cache.py  celery_app.py  database.py  logger.py  models.py  utils.py
backend/scripts/: verify_phase51.py  verify_phase52.py  verify_phase53.py  verify_phase54.py  verify_phase55.py  verify_phase55_real_llm.py
chroma_db/: chroma.sqlite3
docs/: PHASE5_PLAN.md  PROGRESS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
knowledge-base/case-studies/: colors-js.md  event-stream.md  faker-js.md  left-pad.md
knowledge-base/competitors/: backend-frameworks.md  frontend-frameworks.md  state-management.md
knowledge-base/methodology/: cncf-graduation.md  openssf-scorecard.md
mcp-servers/code-analysis-mcp/: __init__.py  pyproject.toml  server.py
mcp-servers/filesystem-mcp/: __init__.py  pyproject.toml  server.py
mcp-servers/github-mcp/: __init__.py  pyproject.toml  server.py
mcp-servers/osv-mcp/: __init__.py  pyproject.toml  server.py
scripts/: benchmark.py  collect_benchmarks.py  create_benchmark_table.py  download_kb.py  download_owasp.py  generate_self_rag_demo.py  init_kb.py
(+63 files in other folders)
