[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis-mcp"
version = "0.1.0"
description = "代码静态分析 MCP Server：Semgrep 安全扫描 + radon 复杂度分析"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
code-analysis-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
