[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filesystem-mcp"
version = "0.1.0"
description = "文件系统操作 MCP Server：仓库克隆、文件读取、目录遍历"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
filesystem-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
